--- a/SerialCommunication/nbproject/project.properties
+++ b/SerialCommunication/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.RXTXcomm.jar=C:\\Program Files (x86)\\Java\\jdk1.8.0_25\\lib\\RXT
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
