--- a/SerialCommunication/nbproject/project.properties
+++ b/SerialCommunication/nbproject/project.properties
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=rxtx.SerialPortReader
+main.class=mainClass.IniciaInterface
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
