--- a/SerialCommunication/nbproject/project.properties
+++ b/SerialCommunication/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/RxtxTeste.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.RXTXcomm.jar=..\\RXTXcomm.jar
+file.reference.RXTXcomm.jar=C:\\Program Files (x86)\\Java\\jdk1.8.0_25\\lib\\RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.RXTXcomm.jar}
+    ${file.reference.RXTXcomm.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
