--- a/SerialCommunication/nbproject/private/private.properties
+++ b/SerialCommunication/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.RXTXcomm.jar=C:\\Users\\Mollon\\Documents\\GitHub\\Projeto-Oficina-2\\RXTXcomm.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Felipe\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\Mollon\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
